--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,28 +11,11 @@
         android:layout_marginTop="35dp"
         android:textColor="@color/colorTextIcons"/>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchbooksEditText"
-        android:background="@color/colorTextIcons"
-        android:layout_above="@+id/buyBooksbutton"
-        android:layout_marginBottom="10dp"
-        android:padding="5dp"
-        android:hint="Search Books"
-        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Buy Books"
+        android:text="Library"
         android:id="@+id/buyBooksbutton"
         android:background="@color/colorAccent"
         android:textColor="@color/colorTextIcons"
