--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,6 @@
         android:id="@+id/appNameTextView"
         android:textSize="65dp"/>
 
-    <TextView  android:id="@+id/txtView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Welcome to the GoodReads Library"
-        android:layout_alignBottom="@id/appNameTextView"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryLight"/>
 
 
     <Button
@@ -52,7 +44,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp"
         android:background="@color/colorAccent"
-        android:text="Library"
+        android:text="View Books"
         android:textColor="@color/colorTextIcons" />
 
 
