--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -7,8 +7,7 @@
         android:layout_height="wrap_content"
         android:text="Welcome to the library "
         android:id="@+id/allbooksTextView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true" />
 
     <ListView
         android:id="@+id/allbookslistView"
